<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">PizzaPalaz</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">sign in</string>
    <string name="prompt_password">Enter your password</string>
    <string name="btn_link_to_register">Not a member? Get registered now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="email_id">Email ID</string>
    <string name="pizza1">THESE TERMS AND CONDITIONS APPLY TO THE WEB SITE WWW.PIZZAPALZ.CO.IN(INDIA) (THE "SITE"). PLEASE READ THIS STATEMENT CAREFULLY. IF YOU DO NOT WISH TO BE BOUND BY THESE TERMS AND CONDITIONS THEN YOU SHOULD NOT ACCESS THIS SITE. ACCESS OF THIS SITE BY YOU SHALL BE DEEMED TO BE YOUR ACCEPTANCE OF THESE TERMS AND CONDITIONS.</string>
    <string name="pizza2">Privacy Policy Yum! Restaurants (India) Private Limited (hereinafter referred to as either, Company, We, Us, or Our) is committed to protecting the privacy of personal information you may provide Us on this Website (the Site). We believe it is important for you to know how we treat your personal information. The terms of this Privacy Policy apply to all users of this Site. If you do not agree with the terms of this Privacy Policy, you should immediately cease the use of this Site.</string>
    <string name="pizza3">Delivery Orders are subjected to</string>
    <string name="pizza4">\u2022 Your address falling in the defined delivery area of the nearest restaurant</string>
    <string name="pizza5">\u2022 The delivery address being mapped to the nearest restaurant that delivers in your area</string>
    <string name="pizza6">\u2022 Availability of the restaurant online</string>
    <string name="pizza7">\u2022 In case the delivery locality is not listed in the restaurant locator, delivery orders cannot be placed; however you may choose to pick up your order from the nearest Pizza Hut restaurant.</string>
    <string name="pizza8">\u2022 Offer valid only in participating restaurants and not valid at Company outlets at airport.</string>
    <string name="pizza9">\u2022 Min Order Amount for Delivery is Rs 200 (inclusive of taxes)</string>
    <string name="pizza10">WHAT INFORMATION DOES COMPANY COLLECT ABOUT ME ON THIS SITE?</string>
    <string name="pizza11">Company collects personally identifiable information that you may voluntarily provide on online forms, which may include: user registration, contact requests, guest comments, online surveys, and other online activities. The personally identifiable information (Personal Information) collected on this Site can include some or all of the following: your name, address, telephone number, email addresses, demographic information, and any other information you may voluntarily provide. You will have the choice whether or not to disclose such Personal Information in the above activities; however, some parts of the Site and some services may be more difficult or impossible to use if you choose not to disclose Personal Information. At the time of registration, you will have the option to receive future offers and updates from the Company by checking the appropriate opt-in box. If you choose to opt-in, your Personal Information will be kept in a secured database and We will alert you via email to new features, special offers, updated information and new services.</string>
    <string name="pizza12">In addition to the Personal Information identified above, Our Web servers automatically identify computers by their IP addresses. Company may use IP addresses to analyze trends, administer the Site, track users movement and gather broad demographic information for aggregate use. To emphasize, IP addresses are not linked to Personal Information. Further, Our Site may use technologies such as cookies to provide visitors with tailored information upon each visit. Cookies are a common part of many commercial Websites that allow small text files to be sent by a Website, accepted by a Web browser and then placed on your hard drive as recognition for repeat visits to the Site. Every time you visit Our Site, Our servers, through cookies, pixels and/or GIF files, collect basic technical information such as your domain name, the address of the last URL visited prior to clicking through to the Site, and your browser and operating system. You do not need to enable cookies to visit Our Site; however, some parts of the Site and some services may be more difficult or impossible to use if cookies are disabled. To emphasize, cookies are not linked to any Personal Information while on this Site. It does not contain your name, address, telephone number, or email address.</string>
    <string name="pizza13">Trademark Notice</string>
    <string name="pizza14">This Website contains many valuable trademarks and service marks owned and used by Pizza Hut, Inc. and its subsidiaries and affiliates throughout the world. These trademarks and service marks are used to distinguish PizzaPalz quality products and services. PizzaPalz, Inc.</string>
    <string name="pizza15">Users agrees that any trademarks, logos, trade names and/or identifying slogans, which are the property of Company, cannot be used by any users for any purpose.</string>
    <string name="pizza16">No users shall publish, nor cause to be published any advertisement or make any representations oral or written which might confuse, mislead or deceive the public, which are detrimental to the trade name, goodwill or reputations of the Company.</string>
    <string name="pizza17">Copyright Notice</string>
    <string name="pizza18">The text, graphics (except the trademarks as noted above) and XML and JAVA code contained in this App are the exclusive.</string>
    <string name="toppings">Toppings</string>
    <string name="code">Valid Code</string>
    <string name="whipped_cream">Ketchup</string>
    <string name="chocolate">Double Cheese</string>
    <string name="whipped_cream1">Finger Fries</string>
    <string name="chocolate1">Chips</string>
    <string name="quantity">Quantity</string>
    <string name="initial_quantity_value">2</string>
    <string name="order">Order</string>
    <string name="order_summary_name">Name: <xliff:g example="Amy" id="name"></xliff:g></string>
    <string name="order_summary_whipped_cream">Add Ketchup ? <xliff:g example="true" id="addKetchup"></xliff:g></string>
    <string name="order_summary_chocolate">Add Double Cheese ? <xliff:g example="true" id="addDoubleCheese"></xliff:g></string>
    <string name="order_summary_quantity">Quantity: <xliff:g example="2" id="quantity"></xliff:g></string>
    <string name="order_summary_price">With GST Total: <xliff:g example="$10" id="price">$</xliff:g></string>
    <string name="thank_you">Thank You!</string>
    <string name="order_summary_email_subject">PizzaPalz for <xliff:g example="Amy" id="name"></xliff:g></string>
    <string name="veg1">NAME: Margherita --- CODE: V01 --- Rs: S(199) - M(299) - L(459)</string>
    <string name="veg2">NAME: Cheesepepperon --- CODE: V02 --- Rs. S(249) - M(399) - L(599)</string>
    <string name="veg3">NAME: PepperBarbecueOnion --- CODE: V03 --- Rs. S(159) - M(289) - L(549)</string>
    <string name="veg4">NAME: PrimeLoadedL --- CODE: V04 --- Rs. S(129) - M(389) - L(599)</string>
    <string name="veg5">NAME: PaneerOnionVeg --- CODE: V05 --- Rs. S(299) - M(349) - L(499)</string>
    <string name="veg6">NAME: Farmhouse --- CODE: V06 --- Rs. S(249) - M(449) - L(649)</string>
    <string name="veg7">NAME: PannerMakhani --- CODE: V07 --- Rs. S(269) - M(589) - L(799)</string>
    <string name="veg8">NAME: VeggieParadise --- CODE: V08 --- Rs. S(299) - M(599) - L(829)</string>
    <string name="veg9">NAME: FreshVeggie --- CODE: V09 --- Rs. S(329) - M(499) - L(689)</string>
    <string name="veg10">NAME: Cheese N Corn --- CODE: V10 --- Rs. S(289) - M(689) - L(929)</string>
    <string name="veg11">NAME: VegExtravaganza --- CODE: V11 --- Rs. S(289) - M(689) - L(929)</string>
    <string name="code1">Code and Size, Eg: V01M</string>
</resources>
