<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:verticalScrollbarPosition="right"
    android:background="#000"
    tools:context="com.example.ajaysharvesh.firebase.AccountActivity.TermsConditionsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/p"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Pizza Palz Terms of Use"
            android:padding="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="23sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textAllCaps="true"/>

        <TextView
            android:id="@+id/p1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/pizza1"
            android:layout_below="@+id/p"
            android:textColor="#FFF"
            android:padding="16dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/p2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:textColor="#FFF"
            android:layout_below="@+id/p1"
            android:text="@string/pizza2"/>

        <TextView
            android:id="@+id/p3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:textColor="#FFF"
            android:layout_below="@+id/p2"
            android:text="@string/pizza3"
            android:textSize="18dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/p4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColor="#FFF"
            android:layout_below="@+id/p3"
            android:text="@string/pizza4"/>
        <TextView
            android:id="@+id/p5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColor="#FFF"
            android:layout_below="@+id/p4"
            android:text="@string/pizza5"/>
        <TextView
            android:id="@+id/p6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColor="#FFF"
            android:layout_below="@+id/p5"
            android:text="@string/pizza6"/>
        <TextView
            android:id="@+id/p7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_below="@+id/p6"
            android:textColor="#FFF"
            android:text="@string/pizza7"/>
        <TextView
            android:id="@+id/p8"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_below="@+id/p7"
            android:textColor="#FFF"
            android:text="@string/pizza8"/>
        <TextView
            android:id="@+id/p9"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="#FFF"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_below="@+id/p8"
            android:text="@string/pizza9"/>
        <TextView
            android:id="@+id/p10"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:layout_below="@+id/p9"
            android:textColor="#FFF"
            android:text="@string/pizza10"
            android:textSize="18dp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/p11"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:textColor="#FFF"
            android:layout_below="@+id/p10"
            android:text="@string/pizza11"

            />
        <TextView
            android:id="@+id/p12"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:layout_below="@+id/p11"
            android:textColor="#FFF"
            android:text="@string/pizza12"
            />
        <TextView
            android:id="@+id/p13"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:layout_below="@+id/p12"
            android:textColor="#FFF"
            android:text="@string/pizza13"
            android:textSize="18dp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/p14"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:layout_below="@+id/p13"
            android:textColor="#FFF"
            android:text="@string/pizza14"
            />
        <TextView
            android:id="@+id/p15"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:textColor="#FFF"
            android:layout_below="@+id/p14"
            android:text="@string/pizza15"
            />
        <TextView
            android:id="@+id/p16"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:layout_below="@+id/p15"
            android:textColor="#FFF"
            android:text="@string/pizza16"
            />
        <TextView
        android:id="@+id/p17"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:layout_below="@+id/p16"
        android:textColor="#FFF"
        android:text="@string/pizza17"
        android:textSize="18dp"
        android:textStyle="bold"/>
        <TextView
            android:id="@+id/p18"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:layout_below="@+id/p17"
            android:textColor="#FFF"
            android:text="@string/pizza18"
            />
    </RelativeLayout>
</ScrollView>
